# Survey-backend

./: .env.local.example  Dockerfile  README.md  Surveys API.postman_collection.json  db.sqlite3  docker-compose.yml  nginx-default.conf  pyproject.toml  schema.yml
core/: celery.py  settings.py  urls.py
core/settings/: common.py  production.py
docker/: run-celery.sh  run-server.sh
survey/: asgi.py  settings.py  urls.py  wsgi.py
surveys/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
surveys/migrations/: 0001_initial.py  0002_alter_fieldresponse_value.py  0003_alter_field_options.py  0004_surveyanalytics_sectionanalytics_fieldanalytics_and_more.py
